--- a/src/tests/templates/CIfailed.html
+++ b/src/tests/templates/CIfailed.html
@@ -23,47 +23,57 @@
       <div style=" border-radius: 8px; background-color: #fde7e7; padding: 20px;">
         <div style="display: flex; justify-content: space-between;">
           <div>
-            <div style="font-size: 16px;font-weight: 600; ">❌ <span style="padding-left: 10px"> Build pipeline failed</span></div>
+            <div style="font-size: 16px;font-weight: 600; ">❌ <span style="padding-left: 10px"> Build pipeline
+                failed</span></div>
             <div style="padding-top: 4px; line-height: 1.43;">Thu, 04 Jun 2020, 11:17 am</div>
             <div style=" padding-bottom: 20px; line-height: 1.43;"> by <span
                 style="color: #0066cc;">prakarsh@devtron.ai</span></div>
 
           </div>
 
-           <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72">
+          <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72">
             <defs>
-                <filter id="6piwc36asa" width="132.5%" height="140.6%" x="-16.2%" y="-20.3%" filterUnits="objectBoundingBox">
-                    <feOffset dy="1" in="SourceAlpha" result="shadowOffsetOuter1"/>
-                    <feGaussianBlur in="shadowOffsetOuter1" result="shadowBlurOuter1" stdDeviation="1"/>
-                    <feColorMatrix in="shadowBlurOuter1" result="shadowMatrixOuter1" values="0 0 0 0 0.117647059 0 0 0 0 0.137254902 0 0 0 0 0.376470588 0 0 0 0.25 0"/>
-                    <feMerge>
-                        <feMergeNode in="shadowMatrixOuter1"/>
-                        <feMergeNode in="SourceGraphic"/>
-                    </feMerge>
-                </filter>
+              <filter id="6piwc36asa" width="132.5%" height="140.6%" x="-16.2%" y="-20.3%"
+                filterUnits="objectBoundingBox">
+                <feOffset dy="1" in="SourceAlpha" result="shadowOffsetOuter1" />
+                <feGaussianBlur in="shadowOffsetOuter1" result="shadowBlurOuter1" stdDeviation="1" />
+                <feColorMatrix in="shadowBlurOuter1" result="shadowMatrixOuter1"
+                  values="0 0 0 0 0.117647059 0 0 0 0 0.137254902 0 0 0 0 0.376470588 0 0 0 0.25 0" />
+                <feMerge>
+                  <feMergeNode in="shadowMatrixOuter1" />
+                  <feMergeNode in="SourceGraphic" />
+                </feMerge>
+              </filter>
             </defs>
             <g fill="none" fill-rule="evenodd">
-                <rect width="72" height="72" opacity=".2" rx="3.273"/>
-                <g filter="url(#6piwc36asa)" transform="translate(16.364 20.455)">
-                    <g fill="#0053A6" fill-rule="nonzero">
-                        <path d="M9 .026H2.455C1.099.026 0 1.124 0 2.48v4.91c0 .451.366.817.818.817h9.818c.452 0 .819-.366.819-.818V2.48c0-1.356-1.1-2.454-2.455-2.454zM27 .026h-6.545C19.099.026 18 1.124 18 2.48v4.91c0 .451.366.817.818.817h9.818c.452 0 .819-.366.819-.818V2.48c0-1.356-1.1-2.454-2.455-2.454z" transform="translate(4.91)"/>
-                    </g>
-                    <path fill="#3384D6" fill-rule="nonzero" d="M2.455 6.545h34.363c1.356 0 2.455 1.1 2.455 2.455v21.273c0 .452-.367.818-.818.818H.818c-.452 0-.818-.366-.818-.818V9c0-1.356 1.099-2.455 2.455-2.455z"/>
-                    <path fill="#06C" fill-rule="nonzero" d="M2.455 6.545h31.909c1.355 0 2.454 1.1 2.454 2.455v21.273c0 .452-.366.818-.818.818H.818c-.452 0-.818-.366-.818-.818V9c0-1.356 1.099-2.455 2.455-2.455z"/>
-                    <g>
-                        <path d="M0 0H14.033V14.033H0z" transform="translate(12.718 11.842)"/>
-                        <path fill="#FFF" fill-rule="nonzero" d="M10.369 1.833c.343-.059.652.121.788.4l2.552 3.98c.22.342.225.78.013 1.127l-3.244 5.305c-.21.341-.58.55-.981.55l-4.718.004h-.032c-.46-.022-.714-.548-.462-.933l3.252-4.977c.122-.253.407-.413.72-.343.23.051.418.239.47.47.037.159.013.31-.052.437-.02.04-.043.074-.069.107l-.495.765c-.147.22-.008.517.256.546l1.198.086c.223.016.442-.06.607-.211.215-.255 1.172-1.813 1.608-2.543.141-.236.123-.53-.037-.753l.005-.002-1.537-2.39-.288-.453c-.03-.039-.056-.08-.078-.123l-.01-.017c-.057-.126-.081-.266-.061-.414.042-.309.287-.565.595-.618zM4.409.877l4.718.017h.032c.46.024.712.551.459.936L6.343 6.79c-.123.253-.409.412-.72.34-.232-.052-.419-.24-.47-.472-.036-.158-.011-.31.054-.436v-.001c.02-.038.044-.074.07-.106l.498-.762c.148-.22.01-.518-.253-.548l-1.198-.091c-.222-.017-.442.058-.607.208-.217.254-1.18 1.808-1.62 2.536-.142.235-.125.529.034.753l-.005.002 1.526 2.397.286.454c.03.039.056.08.077.124l.011.017c.056.126.08.266.059.413-.044.309-.29.565-.598.616-.343.057-.651-.124-.786-.404L.166 7.84c-.219-.344-.222-.782-.008-1.128l3.268-5.29c.21-.34.583-.547.983-.546z" transform="translate(12.718 11.842)"/>
-                    </g>
+              <rect width="72" height="72" opacity=".2" rx="3.273" />
+              <g filter="url(#6piwc36asa)" transform="translate(16.364 20.455)">
+                <g fill="#0053A6" fill-rule="nonzero">
+                  <path
+                    d="M9 .026H2.455C1.099.026 0 1.124 0 2.48v4.91c0 .451.366.817.818.817h9.818c.452 0 .819-.366.819-.818V2.48c0-1.356-1.1-2.454-2.455-2.454zM27 .026h-6.545C19.099.026 18 1.124 18 2.48v4.91c0 .451.366.817.818.817h9.818c.452 0 .819-.366.819-.818V2.48c0-1.356-1.1-2.454-2.455-2.454z"
+                    transform="translate(4.91)" />
                 </g>
+                <path fill="#3384D6" fill-rule="nonzero"
+                  d="M2.455 6.545h34.363c1.356 0 2.455 1.1 2.455 2.455v21.273c0 .452-.367.818-.818.818H.818c-.452 0-.818-.366-.818-.818V9c0-1.356 1.099-2.455 2.455-2.455z" />
+                <path fill="#06C" fill-rule="nonzero"
+                  d="M2.455 6.545h31.909c1.355 0 2.454 1.1 2.454 2.455v21.273c0 .452-.366.818-.818.818H.818c-.452 0-.818-.366-.818-.818V9c0-1.356 1.099-2.455 2.455-2.455z" />
+                <g>
+                  <path d="M0 0H14.033V14.033H0z" transform="translate(12.718 11.842)" />
+                  <path fill="#FFF" fill-rule="nonzero"
+                    d="M10.369 1.833c.343-.059.652.121.788.4l2.552 3.98c.22.342.225.78.013 1.127l-3.244 5.305c-.21.341-.58.55-.981.55l-4.718.004h-.032c-.46-.022-.714-.548-.462-.933l3.252-4.977c.122-.253.407-.413.72-.343.23.051.418.239.47.47.037.159.013.31-.052.437-.02.04-.043.074-.069.107l-.495.765c-.147.22-.008.517.256.546l1.198.086c.223.016.442-.06.607-.211.215-.255 1.172-1.813 1.608-2.543.141-.236.123-.53-.037-.753l.005-.002-1.537-2.39-.288-.453c-.03-.039-.056-.08-.078-.123l-.01-.017c-.057-.126-.081-.266-.061-.414.042-.309.287-.565.595-.618zM4.409.877l4.718.017h.032c.46.024.712.551.459.936L6.343 6.79c-.123.253-.409.412-.72.34-.232-.052-.419-.24-.47-.472-.036-.158-.011-.31.054-.436v-.001c.02-.038.044-.074.07-.106l.498-.762c.148-.22.01-.518-.253-.548l-1.198-.091c-.222-.017-.442.058-.607.208-.217.254-1.18 1.808-1.62 2.536-.142.235-.125.529.034.753l-.005.002 1.526 2.397.286.454c.03.039.056.08.077.124l.011.017c.056.126.08.266.059.413-.044.309-.29.565-.598.616-.343.057-.651-.124-.786-.404L.166 7.84c-.219-.344-.222-.782-.008-1.128l3.268-5.29c.21-.34.583-.547.983-.546z"
+                    transform="translate(12.718 11.842)" />
+                </g>
+              </g>
             </g>
-        </svg>
+          </svg>
         </div>
         <a href="" target="_blank" style="font-size: 12px; color: #fff; border-radius: 4px;
       background: #0066cc; padding-top: 10px; padding-bottom: 10px; padding-right: 12px; padding-left: 10px; cursor: pointer; text-decoration: none;
       font-weight: 600;">View Pipeline</a>
       </div>
     </div>
-    <div style="display: grid; padding: 20px; padding-top: 0px; border-bottom: 1px solid #edf1f5; grid-template-columns: 50% 50%;">
+    <div
+      style="display: grid; padding: 20px; padding-top: 0px; border-bottom: 1px solid #edf1f5; grid-template-columns: 50% 50%;">
       <div>
         <div style="font-size: 12px; color: #3b444c; font-weight: 600;">Application</div>
         <div>dasboard</div>
@@ -74,7 +84,7 @@
       </div>
     </div>
     <div style="font-weight: 700; padding: 20px; padding-bottom: 0px;">
-       Source Code
+      Source Code
     </div>
     <div style="display: grid; padding: 20px; grid-template-columns: 50% 50%;">
       <div>
@@ -86,8 +96,9 @@
         <div style="color: #0066cc;">b5cd4468</div>
       </div>
     </div>
-     <!-- Notification footer -->
-     <div style="display: flex; justify-content: space-between; border-top: 1px solid #f2f4f7; padding: 20px;  align-items: center;">
+    <!-- Notification footer -->
+    <div
+      style="display: flex; justify-content: space-between; border-top: 1px solid #f2f4f7; padding: 20px;  align-items: center;">
       <div style="display: flex; align-items: center; line-height: 16px;">
 
         <a href="" target="_blank" style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
@@ -103,7 +114,8 @@
             </g>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/company/devtron-labs/mycompany/" target="_blank" style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
+        <a href="https://www.linkedin.com/company/devtron-labs/mycompany/" target="_blank"
+          style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
             <g fill="none" fill-rule="evenodd">
               <path d="M0 0H24V24H0z" />
@@ -112,7 +124,8 @@
             </g>
           </svg>
         </a>
-        <a href="https://devtron.ai/blog/" target="_blank" style="color: #000a14; cursor: pointer; text-decoration: none; padding-right: 20px;">
+        <a href="https://devtron.ai/blog/" target="_blank"
+          style="color: #000a14; cursor: pointer; text-decoration: none; padding-right: 20px;">
           Blog
         </a>
         <a href="https://devtron.ai/" target="_blank" style="color: #000a14; cursor: pointer; text-decoration: none;">
