--- a/src/tests/templates/CISuccess.html
+++ b/src/tests/templates/CISuccess.html
@@ -106,47 +106,50 @@
       </div>
 
     </div>
-         <!-- Notification footer -->
-         <div style="display: flex; justify-content: space-between; border-top: 1px solid #f2f4f7; padding: 20px;  align-items: center;">
-          <div style="display: flex; align-items: center; line-height: 16px;">
+    <!-- Notification footer -->
+    <div
+      style="display: flex; justify-content: space-between; border-top: 1px solid #f2f4f7; padding: 20px;  align-items: center;">
+      <div style="display: flex; align-items: center; line-height: 16px;">
 
-            <a href="" target="_blank" style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20"
-                viewBox="0 0 24 24">
-                <defs>
-                  <path id="prefix__a"
-                    d="M12 2c5.523 0 10 4.477 10 10 0 4.955-3.604 9.068-8.333 9.862V14.97H16l.444-2.897h-2.779v-1.88c0-.791.388-1.564 1.633-1.564h1.264V6.163s-1.147-.196-2.243-.196c-2.288 0-3.784 1.387-3.784 3.898v2.208H7.992v2.897h2.544v6.923C5.705 21.185 2 17.025 2 12 2 6.477 6.477 2 12 2z" />
-                </defs>
-                <g fill="none" fill-rule="evenodd">
-                  <path d="M0 0H24V24H0z" />
-                  <use fill="#959BA1" fill-rule="nonzero" xlink:href="#prefix__a" />
-                </g>
-              </svg>
-            </a>
-            <a href="https://www.linkedin.com/company/devtron-labs/mycompany/" target="_blank" style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-                <g fill="none" fill-rule="evenodd">
-                  <path d="M0 0H24V24H0z" />
-                  <path fill="#959BA1"
-                    d="M20 2c1.105 0 2 .895 2 2v16c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2h16zM8.179 9.46H5.177v9.03H8.18V9.46zm7.366-.211l-.225.006c-1.388.075-2.055.845-2.441 1.425l-.039.059V9.461h-3l.002.065c.032 1.033.003 7.625-.002 8.788v.176h3v-5.042l.003-.162c.007-.213.033-.417.096-.57.217-.54.71-1.098 1.54-1.098 1.086 0 1.52.828 1.52 2.041v4.83H19v-5.176l-.004-.256c-.089-2.597-1.538-3.808-3.451-3.808zM6.698 5.108C5.67 5.108 5 5.782 5 6.668c0 .867.651 1.56 1.658 1.56h.02l.162-.006c.951-.068 1.536-.733 1.536-1.554-.02-.886-.652-1.56-1.678-1.56z" />
-                </g>
-              </svg>
-            </a>
-            <a href="https://devtron.ai/blog/" target="_blank" style="color: #000a14; cursor: pointer; text-decoration: none; padding-right: 20px;">
-              Blog
-            </a>
-            <a href="https://devtron.ai/" target="_blank" style="color: #000a14; cursor: pointer; text-decoration: none;">
-              Website
-            </a>
-          </div>
-          <div style="color: #767d84">
-            © Devtron Labs 2020
-          </div>
-        </div>
+        <a href="" target="_blank" style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20"
+            viewBox="0 0 24 24">
+            <defs>
+              <path id="prefix__a"
+                d="M12 2c5.523 0 10 4.477 10 10 0 4.955-3.604 9.068-8.333 9.862V14.97H16l.444-2.897h-2.779v-1.88c0-.791.388-1.564 1.633-1.564h1.264V6.163s-1.147-.196-2.243-.196c-2.288 0-3.784 1.387-3.784 3.898v2.208H7.992v2.897h2.544v6.923C5.705 21.185 2 17.025 2 12 2 6.477 6.477 2 12 2z" />
+            </defs>
+            <g fill="none" fill-rule="evenodd">
+              <path d="M0 0H24V24H0z" />
+              <use fill="#959BA1" fill-rule="nonzero" xlink:href="#prefix__a" />
+            </g>
+          </svg>
+        </a>
+        <a href="https://www.linkedin.com/company/devtron-labs/mycompany/" target="_blank"
+          style=" cursor: pointer; text-decoration: none; padding-right: 20px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+            <g fill="none" fill-rule="evenodd">
+              <path d="M0 0H24V24H0z" />
+              <path fill="#959BA1"
+                d="M20 2c1.105 0 2 .895 2 2v16c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2h16zM8.179 9.46H5.177v9.03H8.18V9.46zm7.366-.211l-.225.006c-1.388.075-2.055.845-2.441 1.425l-.039.059V9.461h-3l.002.065c.032 1.033.003 7.625-.002 8.788v.176h3v-5.042l.003-.162c.007-.213.033-.417.096-.57.217-.54.71-1.098 1.54-1.098 1.086 0 1.52.828 1.52 2.041v4.83H19v-5.176l-.004-.256c-.089-2.597-1.538-3.808-3.451-3.808zM6.698 5.108C5.67 5.108 5 5.782 5 6.668c0 .867.651 1.56 1.658 1.56h.02l.162-.006c.951-.068 1.536-.733 1.536-1.554-.02-.886-.652-1.56-1.678-1.56z" />
+            </g>
+          </svg>
+        </a>
+        <a href="https://devtron.ai/blog/" target="_blank"
+          style="color: #000a14; cursor: pointer; text-decoration: none; padding-right: 20px;">
+          Blog
+        </a>
+        <a href="https://devtron.ai/" target="_blank" style="color: #000a14; cursor: pointer; text-decoration: none;">
+          Website
+        </a>
+      </div>
+      <div style="color: #767d84">
+        © Devtron Labs 2020
+      </div>
     </div>
+  </div>
 
 
-    </div>
+  </div>
 
 </body>
 
