--- a/src/tests/templates/CDFail.html
+++ b/src/tests/templates/CDFail.html
@@ -20,10 +20,11 @@
 
     <!-- Status banner -->
     <div class="status-banner" style="padding: 20px;">
-      <div style=" border-radius: 8px; background-color: #e5f2ff; padding: 20px;">
+      <div style=" border-radius: 8px; background-color: #fde7e7; padding: 20px;">
         <div style="display: flex; justify-content: space-between;">
           <div>
-            <div style="font-size: 16px;font-weight: 600; ">▶️ <span style="padding-left: 10px"> Pre-deloyment pipeline triggered</span></div>
+            <div style="font-size: 16px;font-weight: 600; ">❌ <span style="padding-left: 10px"> Pre-deloyment pipeline
+                failed</span></div>
             <div style="padding-top: 4px; line-height: 1.43;">Thu, 04 Jun 2020, 11:17 am</div>
             <div style=" padding-bottom: 20px; line-height: 1.43;"> by <span
                 style="color: #0066cc;">prakarsh@devtron.ai</span></div>
@@ -117,16 +118,6 @@
         <div style="color: #0066cc;">b5cd4468</div>
       </div>
     </div>
-    <div style="padding-right: 20px; padding-left: 20px;">
-      <div style="font-weight: 700; padding-top: 20px; padding-bottom: 20px; padding-bottom: 0px;">
-        Artifact
-      </div>
-      <div>
-        <div style="font-size: 12px; color: #3b444c; font-weight: 600; padding-top: 20px;">docker image</div>
-        <div>3374vdvy474y</div>
-      </div>
-    </div>
-
     <!-- Notification footer -->
     <div
       style="display: flex; justify-content: space-between; border-top: 1px solid #f2f4f7; padding: 20px;  align-items: center;">
@@ -167,6 +158,7 @@
         © Devtron Labs 2020
       </div>
     </div>
+
   </div>
 
 </body>
