--- a/src/tests/templates/CDSuccess.html
+++ b/src/tests/templates/CDSuccess.html
@@ -23,7 +23,7 @@
       <div style=" border-radius: 8px; background-color: #e9fbf4; padding: 20px;">
         <div style="display: flex; justify-content: space-between;">
           <div>
-            <div style="font-size: 16px;font-weight: 600; ">🎉 <span style="padding-left: 10px">Build pipeline
+            <div style="font-size: 16px;font-weight: 600; ">🎉 <span style="padding-left: 10px">Pre-deloyment pipeline
                 succeeded</span></div>
             <div style="padding-top: 4px; line-height: 1.43;">Thu, 04 Jun 2020, 11:17 am</div>
             <div style=" padding-bottom: 20px; line-height: 1.43;"> by <span
@@ -33,7 +33,7 @@
 
           <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72">
             <defs>
-              <filter id="6piwc36asa" width="132.5%" height="140.6%" x="-16.2%" y="-20.3%"
+              <filter id="prefix__a" width="132.5%" height="133.3%" x="-16.2%" y="-16.7%"
                 filterUnits="objectBoundingBox">
                 <feOffset dy="1" in="SourceAlpha" result="shadowOffsetOuter1" />
                 <feGaussianBlur in="shadowOffsetOuter1" result="shadowBlurOuter1" stdDeviation="1" />
@@ -47,29 +47,51 @@
             </defs>
             <g fill="none" fill-rule="evenodd">
               <rect width="72" height="72" opacity=".2" rx="3.273" />
-              <g filter="url(#6piwc36asa)" transform="translate(16.364 20.455)">
-                <g fill="#0053A6" fill-rule="nonzero">
-                  <path
-                    d="M9 .026H2.455C1.099.026 0 1.124 0 2.48v4.91c0 .451.366.817.818.817h9.818c.452 0 .819-.366.819-.818V2.48c0-1.356-1.1-2.454-2.455-2.454zM27 .026h-6.545C19.099.026 18 1.124 18 2.48v4.91c0 .451.366.817.818.817h9.818c.452 0 .819-.366.819-.818V2.48c0-1.356-1.1-2.454-2.455-2.454z"
-                    transform="translate(4.91)" />
-                </g>
-                <path fill="#3384D6" fill-rule="nonzero"
-                  d="M2.455 6.545h34.363c1.356 0 2.455 1.1 2.455 2.455v21.273c0 .452-.367.818-.818.818H.818c-.452 0-.818-.366-.818-.818V9c0-1.356 1.099-2.455 2.455-2.455z" />
+              <g filter="url(#prefix__a)" transform="matrix(-1 0 0 1 55.636 16.773)">
+                <path fill="#FE636E" fill-rule="nonzero"
+                  d="M8.377 23.516c-2.509.13-6.796 1.554-6.382 4.526 1.047 7.542-7.198 9.964 3.775 9.964 5.52 0 9-2.422 9.525-7.504l-1.49-5.762-5.428-1.224z" />
+                <path fill="#FFD659" fill-rule="nonzero"
+                  d="M10.35 25.51c-1.163.061-3.155.72-2.964 2.103.487 3.503-3.343 4.626 1.754 4.626 2.564 0 4.182-1.123 4.426-3.485l-.564-2.846-2.652-.398z" />
+                <path fill="#FB2A39" fill-rule="nonzero"
+                  d="M12.868 30.723c-1.49 2.713-4.446 4.021-8.503 4.021-1.589 0-2.775-.052-3.643-.16-1.172 2.493-1.743 3.422 5.048 3.422 5.52 0 9-2.422 9.525-7.504l-1.253-1.265-.427-.431c-.038.147-.078.289-.123.431-.114.58-.327 1.075-.624 1.486z" />
+                <path fill="#FFBF00" fill-rule="nonzero"
+                  d="M12.398 27.577c-.549 1.694-2.043 2.505-4.223 2.505-.436 0-.805-.007-1.118-.025-.643 1.608-1.562 2.182 2.083 2.182 1.7 0 2.985-.492 3.728-1.515.297-.412.51-.906.624-1.487.031-.156.056-.316.074-.483l-1.168-1.177z" />
+                <path fill="#99B4CD" fill-rule="nonzero"
+                  d="M11.41 19.382l-3.27 1.92c-.658.386-.549 1.42-.025 1.952l.262.262 1.973 1.994 3.216 3.244 1.73 1.748.901.91c.526.529 1.55.637 1.933-.024l1.9-3.305-2.15-8.367-6.47-.334zM37.92.103c-1.574-.291-4.44.013-7.93 1.206l1.57 5.828 6.38 2.177c1.186-3.546 1.483-6.45 1.183-8.027C38.95.367 38.837.272 37.92.103z" />
                 <path fill="#06C" fill-rule="nonzero"
-                  d="M2.455 6.545h31.909c1.355 0 2.454 1.1 2.454 2.455v21.273c0 .452-.366.818-.818.818H.818c-.452 0-.818-.366-.818-.818V9c0-1.356 1.099-2.455 2.455-2.455z" />
+                  d="M19.947 6.59c-4.368-1.592-7.75-.867-11.18 2.268-1.592 1.545-4.239 3.576-2.053 5.783l2.719 2.744 7.813-3.984 2.701-6.81zM32.704 19.465l-7.344 3.066-3.35 7.55 2.719 2.745c2.186 2.207 4.198-.465 5.728-2.071 1.587-1.77 4.413-5.143 2.247-11.29z" />
+                <path fill="#FFF" fill-rule="nonzero"
+                  d="M37.94 9.314c-.184.554-.392 1.123-.62 1.704-1.039 2.63-2.544 5.53-4.616 8.447-2.603 3.664-6.098 7.362-10.694 10.617l-.539-.544-1.44-1.455-3.89-3.927-.42-.423-.42-.425-3.89-3.926-1.978-1.997c3.224-4.64 6.887-8.168 10.514-10.794 3.527-2.551 7.02-4.25 10.042-5.282l7.95 8.005z" />
                 <g>
-                  <path d="M0 0H14.033V14.033H0z" transform="translate(12.718 11.842)" />
-                  <path fill="#FFF" fill-rule="nonzero"
-                    d="M10.369 1.833c.343-.059.652.121.788.4l2.552 3.98c.22.342.225.78.013 1.127l-3.244 5.305c-.21.341-.58.55-.981.55l-4.718.004h-.032c-.46-.022-.714-.548-.462-.933l3.252-4.977c.122-.253.407-.413.72-.343.23.051.418.239.47.47.037.159.013.31-.052.437-.02.04-.043.074-.069.107l-.495.765c-.147.22-.008.517.256.546l1.198.086c.223.016.442-.06.607-.211.215-.255 1.172-1.813 1.608-2.543.141-.236.123-.53-.037-.753l.005-.002-1.537-2.39-.288-.453c-.03-.039-.056-.08-.078-.123l-.01-.017c-.057-.126-.081-.266-.061-.414.042-.309.287-.565.595-.618zM4.409.877l4.718.017h.032c.46.024.712.551.459.936L6.343 6.79c-.123.253-.409.412-.72.34-.232-.052-.419-.24-.47-.472-.036-.158-.011-.31.054-.436v-.001c.02-.038.044-.074.07-.106l.498-.762c.148-.22.01-.518-.253-.548l-1.198-.091c-.222-.017-.442.058-.607.208-.217.254-1.18 1.808-1.62 2.536-.142.235-.125.529.034.753l-.005.002 1.526 2.397.286.454c.03.039.056.08.077.124l.011.017c.056.126.08.266.059.413-.044.309-.29.565-.598.616-.343.057-.651-.124-.786-.404L.166 7.84c-.219-.344-.222-.782-.008-1.128l3.268-5.29c.21-.34.583-.547.983-.546z"
-                    transform="translate(12.718 11.842)" />
+                  <path d="M0 0H10.135V10.135H0z" transform="matrix(-1 0 0 1 31.007 8.16)" />
+                  <g fill="#06C" fill-rule="nonzero">
+                    <path
+                      d="M9.9 3.854L8.059.98c-.099-.202-.322-.332-.57-.29-.221.039-.399.224-.429.447-.014.106.003.208.044.296v.002l.007.013c.016.031.035.06.057.089l.208.327 1.11 1.726-.004.002c.115.16.129.373.027.543-.315.528-1.006 1.653-1.162 1.837-.119.109-.277.164-.438.152l-.865-.061c-.19-.021-.291-.236-.185-.395l.358-.552c.018-.024.035-.05.049-.076v-.001-.001c.047-.092.065-.2.038-.315-.038-.167-.173-.303-.34-.34-.226-.05-.432.065-.52.248L3.094 8.225c-.181.279.002.658.335.674h.022l3.408-.003c.29 0 .557-.15.708-.397L9.91 4.668c.154-.25.15-.567-.01-.814M.12 5.029L1.95 7.91c.098.202.32.333.568.292.222-.037.4-.222.432-.445.015-.106-.002-.207-.043-.296V7.46L2.9 7.447c-.016-.031-.035-.061-.056-.089l-.207-.328L1.535 5.3l.004-.003c-.115-.161-.127-.373-.025-.543.318-.526 1.014-1.649 1.17-1.832.12-.108.278-.163.439-.15l.865.065c.19.022.29.237.183.396l-.36.55c-.019.024-.035.05-.05.076v.002c-.047.091-.065.2-.04.315.038.167.173.303.34.341.225.052.431-.063.52-.246L6.946.688C7.129.41 6.947.03 6.615.013h-.023L3.185 0c-.29-.001-.558.148-.71.394l-2.36 3.82c-.155.25-.153.567.005.815"
+                      transform="matrix(-1 0 0 1 31.007 8.16) translate(0 .633)" />
+                  </g>
                 </g>
+                <path fill="#6C9ABB" fill-rule="nonzero"
+                  d="M37.425.035c.154 1.654-.193 4.317-1.255 7.495l1.77 1.784c1.186-3.546 1.483-6.45 1.183-8.028C38.95.367 38.837.272 37.92.103c-.154-.03-.317-.052-.494-.068z" />
+                <path fill="#EBEBEB" fill-rule="nonzero"
+                  d="M35.548 9.235c-1.039 2.632-2.542 5.528-4.617 8.448-.897 1.263-1.9 2.53-3.018 3.782-1.123 1.258-2.36 2.498-3.723 3.704-1.215 1.075-2.529 2.123-3.947 3.128l1.228 1.24.54.545c4.595-3.255 8.09-6.953 10.693-10.617 2.072-2.918 3.578-5.816 4.616-8.448.228-.58.436-1.15.62-1.703L36.17 7.53c-.117.345-.24.696-.374 1.053-.078.214-.161.433-.248.652z" />
+                <path fill="#6C9ABB" fill-rule="nonzero"
+                  d="M17.875 25.908l-1.9 3.304c-.382.662-1.407.554-1.933.025l1.253 1.265.902.91c.526.529 1.55.637 1.933-.024l1.9-3.305-2.155-2.175z" />
+                <path fill="#0053A6" fill-rule="nonzero"
+                  d="M32.704 19.465c-.36.509-.739 1.017-1.133 1.523.51 4.307-1.644 6.864-2.955 8.328-1.258 1.317-2.835 3.352-4.57 2.821l.683.69c2.186 2.206 4.198-.466 5.728-2.072 1.587-1.77 4.413-5.143 2.247-11.29zM17.18 5.874c-3.265 2.471-6.53 5.683-9.454 9.788l1.707 1.723c3.224-4.64 6.887-8.168 10.514-10.795-.966-.352-1.886-.592-2.768-.716z" />
+                <path fill="#EBEBEB" fill-rule="nonzero"
+                  d="M19.194 21.076l-3.05 3.077-.004.003-.42-.423-.42-.425 3.047-3.072c.232-.235.61-.237.843-.004.234.233.236.61.004.844z" />
               </g>
             </g>
           </svg>
         </div>
-        <a href="" target="_blank" style="font-size: 12px; color: #fff; border-radius: 4px;
-      background: #0066cc; padding-top: 10px; padding-bottom: 10px; padding-right: 12px; padding-left: 10px; cursor: pointer; text-decoration: none;
-      font-weight: 600;">View Pipeline</a>
+        <div style="display: flex;">
+          <a href="" target="_blank" style=" font-size: 12px; color: #fff; border-radius: 4px;
+          background: #0066cc; padding-top: 10px; padding-bottom: 10px; padding-right: 12px; padding-left: 10px; cursor: pointer; text-decoration: none;
+          font-weight: 600;">View Pipeline</a>
+          <a href="" target="_blank" style="margin-left: 8px; font-size: 12px; color: #3b444c; border-radius: 4px;border: solid 1px #d0d4d9;
+          background: #fff; padding-top: 10px; padding-bottom: 10px; padding-right: 12px; padding-left: 10px; cursor: pointer; text-decoration: none;
+          font-weight: 600;">App details</a>
+        </div>
       </div>
 
       <div
