--- a/src/tests/templates/CDFail.html
+++ b/src/tests/templates/CDFail.html
@@ -14,9 +14,10 @@
 <body>
   <div style="background-color: #f2f4f7; height: 100vh;">
   <div class="notification-wrapper"
-    style="border: 1px solid #f2f4f7; max-width: 600px; margin: auto;color: #000a14; font-family: Open Sans; font-size: 14px; background-color: #fff;">
+    style="max-height: 100vh;
+    overflow: scroll; border: 1px solid #f2f4f7; max-width: 600px; margin: auto;color: #000a14; font-family: Open Sans; font-size: 14px; background-color: #fff;">
     <div style="padding: 20px; border-bottom: 1px solid #f2f4f7;">
-      <img style="max-width: 122px;" src="https://cdn.devtron.ai/images/ic-nav-logo2x.png" alt="ci-triggered" />
+      <img style="max-width: 122px;" src="https://devtron-public-asset.s3.us-east-2.amazonaws.com/images/devtron/devtron-logo.png" alt="ci-triggered" />
     </div>
 
     <!-- Status banner -->
@@ -112,7 +113,7 @@
     <div style="font-weight: 700; padding: 20px; padding-bottom: 0px;">
       Source Code
     </div>
-    <div style="display: grid; padding: 20px; grid-template-columns: 50% 50%;">
+    <div style="display: grid; padding: 10px 20px; grid-template-columns: 50% 50%;">
       <div>
         <div style="font-size: 12px; color: #3b444c; font-weight: 600;">Branch</div>
         <div>{{appName}}/{{branch}}</div>
@@ -126,7 +127,7 @@
     </div>
    {{/webhookType}}
    {{#webhookType}}{{#webhookData.mergedType}
-   <div style="display: grid; padding: 20px; grid-template-columns: 50% 50%;">
+   <div style="display: grid; padding: 10px 20px; grid-template-columns: 50% 50%;">
     <div>
       <div style="font-size: 12px; color: #3b444c; font-weight: 600;">Title</div>
       <div>{{webhookData.data.title}}</div>
@@ -136,7 +137,7 @@
       <a href="{{& webhookData.data.giturl}}" target="_blank" style="color: #0066cc;"> View</a>
     </div>
   </div>
-  <div style="display: grid; padding: 20px; grid-template-columns: 50% 50%;">
+  <div style="display: grid; padding: 10px 20px; grid-template-columns: 50% 50%;">
     <div>
       <div style="font-size: 12px; color: #3b444c; font-weight: 600;">Source branch</div>
       <div>{{webhookData.data.sourcebranchname}}</div>
@@ -146,7 +147,7 @@
       <a href="{{& webhookData.data.sourcecheckoutlink}}" target="_blank" style="color: #0066cc;"> {{webhookData.data.sourcecheckout}}</a>
     </div>
   </div>
-  <div style="display: grid; padding: 20px; grid-template-columns: 50% 50%;">
+  <div style="display: grid; padding: 10px 20px; grid-template-columns: 50% 50%;">
     <div>
       <div style="font-size: 12px; color: #3b444c; font-weight: 600;">Target Branch</div>
       <div>{{{webhookData.data.targetbranchname}}</div>
@@ -158,8 +159,10 @@
   </div>
   {{/webhookData.mergedType}}
   {{^webhookData.mergedType}}
+  <div style="display: grid; padding: 10px 20px; padding-top: 0px;">
   <div style="font-size: 12px; color: #3b444c; font-weight: 600;">Target Checkout</div>
    <div>{{webhookData.data.targetcheckout}}</div>
+  </div>
    {{/webhookData.mergedType}}
    {{/webhookType}}
    {{/ciMaterials}}
