--- a/src/tests/templates/CITrigger.html
+++ b/src/tests/templates/CITrigger.html
@@ -14,9 +14,10 @@
 <body>
   <div style="background-color: #f2f4f7; height: 100vh;">
     <div class="notification-wrapper"
-      style="border: 1px solid #f2f4f7; max-width: 600px; margin: auto;color: #000a14; font-family: Open Sans; font-size: 14px; background-color: #fff;">
+      style="max-height: 100vh;
+      overflow: scroll; border: 1px solid #f2f4f7; max-width: 600px; margin: auto;color: #000a14; font-family: Open Sans; font-size: 14px; background-color: #fff;">
       <div style="padding: 20px; border-bottom: 1px solid #f2f4f7;">
-        <img style="max-width: 122px;" src="../../../assets/image/ic-nav-logo@2x.png" alt="ci-triggered" />
+        <img style="max-width: 122px;" src="https://devtron-public-asset.s3.us-east-2.amazonaws.com/images/devtron/devtron-logo.png" alt="ci-triggered" />
       </div>
 
     <!-- Status banner -->
